--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     testImplementation "junit:junit:${versions.junit}"
     androidTestImplementation "androidx.test.ext:junit-ktx:${versions.junitext}"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:${versions.espresso}"
+    implementation "androidx.recyclerview:recyclerview:${versions.recyclerview}"
+    implementation "androidx.constraintlayout:constraintlayout:${versions.constraint}"
 }
