--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ buildscript {
         'corektx'       : '1.2.0',
         'junit'         : '4.13',
         'junitext'      : '1.1.1',
-        'espresso'      : '3.2.0'
+        'espresso'      : '3.2.0',
+        'recyclerview'  : '1.1.0',
+        'constraint'    : '2.0.0-beta4'
     ]
 
     repositories {
@@ -33,7 +35,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-
     }
 }
 
