--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.70'
+    ext.versions = [
+        'compile_sdk'   : 29,
+        'min_sdk'       : 17,
+        'target_sdk'    : 29,
+        'build_tools'   : '29.0.2',
+        'gradle'        : '3.6.1',
+        'kotlin_version': '1.3.70',
+        'appcompat'     : '1.1.0',
+        'corektx'       : '1.2.0',
+        'junit'         : '4.13',
+        'junitext'      : '1.1.1',
+        'espresso'      : '3.2.0'
+    ]
+
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:${versions.gradle}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin_version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +33,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
