--- a/build.gradle
+++ b/build.gradle
@@ -6,22 +6,23 @@ buildscript {
         'min_sdk'       : 17,
         'target_sdk'    : 29,
         'build_tools'   : '29.0.2',
-        'gradle'        : '3.6.1',
+        'gradle'        : '3.6.2',
         'kotlin_version': '1.3.70',
         'appcompat'     : '1.1.0',
         'corektx'       : '1.2.0',
+        'recyclerview'  : '1.1.0',
+        'constraint'    : '2.0.0-beta4',
+        'ktor'          : '1.3.2',
         'junit'         : '4.13',
         'junitext'      : '1.1.1',
-        'espresso'      : '3.2.0',
-        'recyclerview'  : '1.1.0',
-        'constraint'    : '2.0.0-beta4'
+        'espresso'      : '3.2.0'
     ]
 
     repositories {
         google()
         jcenter()
-
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradle}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin_version}"
